# event-sourcing-pizza-delivery-demo-rs

./: .gitignore  Cargo.toml  README.md  orders.esdl
client/: Cargo.toml
client/src/: api.rs  main.rs
server/: Cargo.toml  build.rs
server/src/: api.rs  main.rs
server/src/order/: mod.rs  projection.rs  types.rs
src/: api.rs  main.rs  types.rs  web.rs
src/order/: aggregate.rs  mod.rs  projection.rs  types.rs
