[package]
name = "event-sourcing-pizza-delivery-demo-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
async-trait = "0.1.52"
chrono = "0.4.19"
eventstore = "2.0.0-alpha.2"
serde = { version = "1.0", features = ["derive"] }
thalo = { features = ["macros"], path = "../thalo/thalo" } 
thalo-eventstoredb = { path = "../thalo/thalo-eventstoredb", features = ["debug"] }
tokio = { version = "1.15", features = [
  "macros",
  "rt",
  "rt-multi-thread",
  "sync",
]}
uuid =  { version = "1.0.0-alpha.1", features = ["v4"] }

[build-dependencies]
esdl = { git = "https://github.com/Shearerbeard/esdl", branch = "main", features = ["codegen"] }
