[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console_error_panic_hook = "0.1.7"
console_log = "0.2.0"
chrono = { version = "0.4.19", features = ["serde"] }
log = "0.4.14"
reqwasm = "0.4.1"
serde = { version =  "1.0.136", features = ["derive"]}
sycamore = { version = "0.8.0-beta.3", features = ["suspense"] }
sycamore-router = "0.8.0-beta.3"
